Finalise row_chat.xml

--- a/radAR2/app/src/main/res/layout/row_chat.xml
+++ b/radAR2/app/src/main/res/layout/row_chat.xml
@@ -48,34 +48,40 @@ android:orientation="vertical">
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
+                android:id="@+id/timestamp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/relativeLayout2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/row_chat_name"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/row_chat_name">
+
+            <ImageView
                 android:id="@+id/is_tracking_group"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:text="@string/tracking_group"
-                android:textColor="@color/colorAccent"
+                android:layout_marginRight="3dp"
+                android:src="@drawable/ic_my_location_black_18dp"
                 android:visibility="gone" />
 
-            <TextView
-                android:id="@+id/is_chat"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:text="@string/chat"
-                android:textColor="@color/colorPrimary"
-                android:visibility="gone" />
         </RelativeLayout>
 
         <TextView
             android:id="@+id/row_chat_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
             android:text="@string/name"
             android:textColor="@android:color/black"
             android:textSize="@dimen/name_font_size"
-            app:layout_constraintStart_toEndOf="@+id/row_profile_picture"
-            tools:layout_editor_absoluteY="8dp" />
+            app:layout_constraintStart_toEndOf="@+id/relativeLayout2"
+            tools:layout_editor_absoluteY="0dp" />
 
         <LinearLayout
             android:id="@+id/linearLayout8"
