Group now editable

--- a/radAR2/app/src/main/res/layout/fragment_group_locations.xml
+++ b/radAR2/app/src/main/res/layout/fragment_group_locations.xml
@@ -27,7 +27,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="16dp"
                     android:text="Tracking"
                     android:textSize="24sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -35,13 +35,15 @@
 
                 <TextView
                     android:id="@+id/textView3"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="16dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
-                    android:text="Currently not tracking (sharing and receiving location updates). Tap on TRACK to start tracking."
+                    android:text="@string/not_tracking"
                     app:layout_constraintBottom_toTopOf="@+id/button4"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tracking" />
 
@@ -52,7 +54,7 @@
                     android:layout_marginBottom="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
-                    android:text="Start tracking"
+                    android:text="@string/start_tracking"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -63,7 +65,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    android:text="OFF"
+                    android:text="@string/off_caps"
                     android:textColor="@color/colorPrimary"
                     app:layout_constraintStart_toEndOf="@+id/tracking"
                     app:layout_constraintTop_toTopOf="@+id/tracking" />
@@ -72,31 +74,6 @@
 
 
 
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="16dp"
-                android:text="Views"
-                android:textSize="24sp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center">
-
-                <Button
-                    android:id="@+id/start_tracking_in_AR"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="AR view" />
-
-                <Button
-                    android:id="@+id/go_to_mapView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Map view" />
-            </LinearLayout>
 
 
 
