--- a/radAR2/app/src/main/res/layout/row_friends_large.xml
+++ b/radAR2/app/src/main/res/layout/row_friends_large.xml
@@ -1,33 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:paddingLeft="@dimen/recyclerView_padding_small"
-    android:paddingRight="@dimen/recyclerView_padding_small"
-    android:paddingTop="@dimen/row_padding"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/row_friends_profile_picture"
-        android:layout_width="@dimen/user_profile_img_size"
-        android:layout_height="@dimen/user_profile_img_size"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:contentDescription="Profile picture"
-        android:src="@drawable/img" />
+        android:src="@mipmap/ic_launcher_round"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="8dp">
+        android:id="@+id/relativeLayout3"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/row_friends_profile_picture"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
+            android:id="@+id/linearLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:orientation="vertical"
-            android:id="@+id/linearLayout">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -38,27 +48,30 @@
                     android:id="@+id/row_friends_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
                     android:text="Kenneth A."
-                    android:textColor="@android:color/black" />
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp" />
 
                 <!--<TextView-->
-                    <!--android:id="@+id/row_friends_username"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:text=" krusli"-->
-                    <!--android:textColor="@android:color/black" />-->
+                <!--android:id="@+id/row_friends_username"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text=" krusli"-->
+                <!--android:textColor="@android:color/black" />-->
 
             </LinearLayout>
 
             <TextView
-                android:layout_marginTop="2dp"
                 android:id="@+id/row_friends_online_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
                 android:text="Online" />
 
         </LinearLayout>
 
     </RelativeLayout>
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
