--- a/radAR2/app/src/main/res/menu/edit_activity_menu.xml
+++ b/radAR2/app/src/main/res/menu/edit_activity_menu.xml
@@ -2,8 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:title="@string/done"
+        android:id="@+id/done"
+        android:orderInCategory="101"
+        android:icon="@drawable/ic_done_white_24dp"
+        app:showAsAction="ifRoom" />
 </menu>
