--- a/radAR2/app/src/main/res/menu/group_detail.xml
+++ b/radAR2/app/src/main/res/menu/group_detail.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:title="@string/edit"
+        android:id="@+id/edit"
+        android:orderInCategory="101"
+        android:icon="@drawable/ic_edit_white_24dp"
+        app:showAsAction="ifRoom" />
 
 </menu>
