--- a/radAR2/app/src/main/res/layout/activity_edit_group.xml
+++ b/radAR2/app/src/main/res/layout/activity_edit_group.xml
@@ -46,7 +46,7 @@
                         android:layout_marginBottom="16dp"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="16dp"
-                        android:src="@mipmap/ic_launcher"
+                        android:src="@mipmap/ic_launcher_round"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
