--- a/radAR2/app/src/main/res/layout/row_friends_with_delete.xml
+++ b/radAR2/app/src/main/res/layout/row_friends_with_delete.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/row_friends_profile_picture"
         android:layout_width="@dimen/user_profile_img_size"
         android:layout_height="@dimen/user_profile_img_size"
@@ -14,7 +14,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:contentDescription="Profile picture"
-        android:src="@drawable/img"
+        android:src="@mipmap/ic_launcher_round"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
