--- a/radAR2/app/src/main/res/layout/activity_user_detail.xml
+++ b/radAR2/app/src/main/res/layout/activity_user_detail.xml
@@ -63,7 +63,7 @@
 
                 </android.support.constraint.ConstraintLayout>
 
-                <ImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/tracking_group_details_profile"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
@@ -71,7 +71,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
                     android:clickable="true"
-                    android:src="@mipmap/ic_launcher"
+                    android:src="@mipmap/ic_launcher_round"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
