Fix EditProfileActivity to not look bad

--- a/radAR2/app/src/main/res/layout/row_friends_with_delete.xml
+++ b/radAR2/app/src/main/res/layout/row_friends_with_delete.xml
@@ -80,7 +80,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="16dp"
-        android:text="DELETE"
+        android:text="@string/remove"
         android:textColor="#FF0000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
