--- a/radAR2/app/src/main/res/layout/activity_edit.xml
+++ b/radAR2/app/src/main/res/layout/activity_edit.xml
@@ -41,9 +41,11 @@
 
         <EditText
             android:id="@+id/name"
-            android:layout_width="wrap_content"
-            android:layout_height="45dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:ems="10"
             android:hint="@string/name"
