--- a/radAR2/app/src/main/res/layout/row_search.xml
+++ b/radAR2/app/src/main/res/layout/row_search.xml
@@ -1,64 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:orientation="horizontal"
+android:layout_width="match_parent"
+android:layout_height="wrap_content">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="match_parent"
+<de.hdodenhof.circleimageview.CircleImageView
+    android:id="@+id/row_friends_profile_picture"
+    android:layout_marginBottom="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginTop="8dp"
+    android:layout_width="@dimen/group_img_size"
+    android:layout_height="@dimen/group_img_size"
+    android:contentDescription="Profile picture"
+    android:src="@mipmap/ic_launcher_round"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
+
+<RelativeLayout
+    android:id="@+id/relativeLayout4"
+    android:layout_width="0dp"
+    android:layout_height="match_parent"
+    android:layout_marginBottom="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginTop="8dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toEndOf="@+id/row_friends_profile_picture"
+    app:layout_constraintTop_toTopOf="parent">
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp">
+        android:layout_centerVertical="true"
+        android:orientation="vertical"
+        android:paddingEnd="8dp"
+        android:paddingStart="8dp">
 
-        <RelativeLayout
-            android:padding="12dp"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            >
-
-            <!--We can add content of the cardview here -->
-            <ImageView
-                android:id="@+id/searchImageID"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:background="@android:color/background_dark"/>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:id="@+id/row_search_name"
-                android:layout_toRightOf="@+id/searchImageID"
-                android:layout_marginLeft="5dp">
-
-                <TextView
-                    android:id="@+id/row_input_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:text="Kenneth A."
-                    android:textColor="@android:color/black"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/row_search_username"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=" krusli"
-                    android:textColor="@android:color/black" />
-
-            </LinearLayout>
+            android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/row_description"
+                android:id="@+id/row_input_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/row_search_name"
-                android:layout_toEndOf="@+id/searchImageID"
-                android:paddingLeft="5dp"
-                android:text="Description" />
+                android:text="Kenneth A."
+                android:textSize="18sp"
+                android:textColor="@android:color/black" />
 
-        </RelativeLayout>
+            <TextView
+                android:id="@+id/row_search_username"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" krusli"
+                android:textSize="18sp"
+                android:textColor="@android:color/black" />
 
-    </android.support.v7.widget.CardView>
+        </LinearLayout>
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/row_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:text="Description" />
+
+    </LinearLayout>
+
+</RelativeLayout>
+
+</android.support.constraint.ConstraintLayout>
