--- a/radAR2/app/src/main/res/layout/row_friend_request.xml
+++ b/radAR2/app/src/main/res/layout/row_friend_request.xml
@@ -3,11 +3,6 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp">
 
         <RelativeLayout
             android:padding="12dp"
@@ -15,12 +10,13 @@
             android:layout_height="wrap_content"
             >
 
-            <!--We can add content of the cardview here -->
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/searchImageID"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:background="@android:color/background_dark"/>
+                android:layout_marginEnd="8dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:contentDescription="Profile picture"
+                android:src="@mipmap/ic_launcher_round" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -36,19 +32,20 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:text="Kenneth A."
-                    android:textColor="@android:color/black"
-                    android:textStyle="bold" />
+                    android:textSize="17sp"
+                    android:textColor="@android:color/black" />
 
             </LinearLayout>
 
             <Button
+                android:id="@+id/accept"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:textSize="10sp"
-                android:text="accept"
-                android:id="@+id/accept"
                 android:layout_marginTop="20dp"
-                android:layout_toRightOf="@+id/searchImageID"/>
+                android:layout_toRightOf="@+id/searchImageID"
+                android:backgroundTint="@color/colorAccent"
+                android:text="accept"
+                android:textSize="10sp" />
 
             <Button
                 android:layout_width="wrap_content"
@@ -61,7 +58,5 @@
 
 
         </RelativeLayout>
-
-    </android.support.v7.widget.CardView>
 
 </LinearLayout>
