--- a/radAR2/app/src/main/res/layout/row_user_checkbox.xml
+++ b/radAR2/app/src/main/res/layout/row_user_checkbox.xml
@@ -18,7 +18,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/user_row_imageView"
         android:layout_width="60dp"
         android:layout_height="60dp"
