--- a/radAR2/app/src/main/res/layout/activity_edit_group.xml
+++ b/radAR2/app/src/main/res/layout/activity_edit_group.xml
@@ -106,7 +106,7 @@
                         android:layout_marginBottom="16dp"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="16dp"
-                        android:text="@string/delete_group"
+                        android:text="@string/leave_group"
                         android:textColor="#FF0000"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
