Add member working

--- a/radAR2/app/src/main/res/layout/row_friends_with_delete.xml
+++ b/radAR2/app/src/main/res/layout/row_friends_with_delete.xml
@@ -67,7 +67,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
-                android:text="Online" />
+                android:text="@string/online" />
 
         </LinearLayout>
 
@@ -75,6 +75,7 @@
 
     <TextView
         android:id="@+id/delete_TV"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
