Ensure name is loaded to textview

--- a/radAR2/app/src/main/res/layout/activity_new_group.xml
+++ b/radAR2/app/src/main/res/layout/activity_new_group.xml
@@ -15,7 +15,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/friend_request_toolbar"
+            android:id="@+id/new_group_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
